src/test/deca/codegen/invalid/created/WrongDowncast.deca
// Description:
// Downcast
// Resultats:
//

class A{
    int m(){
        return 1;
    }
}

class B extends A{
    int f(){
        return 2;
    }
}

{
    A newA = new A();
    println(((B)(newA)).f());
}